Alignment fixes for the responsive menu.

--- a/xubuntu-fifteen/style-resp-450.css
+++ b/xubuntu-fifteen/style-resp-450.css
@@ -82,18 +82,30 @@ figure {
  *
  */
 
+.navigation.nd .menu > li > a {
+	padding-left: 2.5%;
+	padding-right: 2.5%;
+}
 .navigation.nd .menu li .sub-menu li {
 	float: left;
 	display: block;
 	width: 100%;
 	margin: 0 !important;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid #f1f1f1;
 	overflow: hidden;
 }
 	.navigation.nd .menu li .sub-menu li a {
-		display: inline-block;
+		display: block;
 		padding: 0.25em 2.5%;
 		border-right: none;
+	}
+
+#opennavi,
+#navi .expand {
+	right: 2.5%;
+}
+	#opennavi {
+		margin-right: -3px;
 	}
 
 .hb {
